@@ -21,7 +21,6 @@ package com.tencent.cloud.metadata.core;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -40,6 +39,8 @@ import org.springframework.core.annotation.Order;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import static com.tencent.cloud.common.constant.ContextConstant.UTF_8;
+
 /**
  * Filter used for storing the metadata from upstream temporarily when web application is
  * SERVLET.
@@ -53,8 +54,7 @@ public class DecodeTransferMetadataServletFilter extends OncePerRequestFilter {
 
 	@Override
 	protected void doFilterInternal(HttpServletRequest httpServletRequest,
-			HttpServletResponse httpServletResponse, FilterChain filterChain)
-			throws ServletException, IOException {
+			HttpServletResponse httpServletResponse, FilterChain filterChain) throws ServletException, IOException {
 		Map<String, String> internalTransitiveMetadata = getInternalTransitiveMetadata(httpServletRequest);
 		Map<String, String> customTransitiveMetadata = CustomTransitiveMetadataResolver.resolve(httpServletRequest);
 
@@ -77,7 +77,7 @@ public class DecodeTransferMetadataServletFilter extends OncePerRequestFilter {
 		String customMetadataStr = httpServletRequest.getHeader(MetadataConstant.HeaderName.CUSTOM_METADATA);
 		try {
 			if (StringUtils.hasText(customMetadataStr)) {
-				customMetadataStr = URLDecoder.decode(customMetadataStr, StandardCharsets.UTF_8.name());
+				customMetadataStr = URLDecoder.decode(customMetadataStr, UTF_8);
 			}
 		}
 		catch (UnsupportedEncodingException e) {
@@ -88,5 +88,4 @@ public class DecodeTransferMetadataServletFilter extends OncePerRequestFilter {
 		// create custom metadata.
 		return JacksonUtils.deserialize2Map(customMetadataStr);
 	}
-
 }
